@@ -10,6 +10,7 @@ Introduction to all the key parts of trytond:
     :maxdepth: 1
 
     install
+    logs
     models/index
     models/fields_default_value
     models/fields_on_change
